testsuite/tests/interpreter/combine_not_recursive/test.out
{"a": 1, "b": 2}
script.lkql:2:7: error: Cannot combine objects, both define the "a" member
  2 | print({a: "A"}.combine({a: "B"}, recursive=false))
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
script.lkql:2:7 in script.lkql
  2 | print({a: "A"}.combine({a: "B"}, recursive=false))
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
